Continue Java 21+ modernization with diamond operator and String.formatted()
Diamond operator improvements:
- Player.java: LinkedList, HashMap, LinkedHashSet, ArrayDeque
- Constants.java: HashMap in static initializers
- ItemContainer.java: LinkedList
- StatRestorationEvent.java: HashMap, AtomicReference
- ThreadSafeIPTracker.java: HashMap

String.formatted() conversions:
- ActionSender.java: Duel and stake item messages